@@ -187,6 +187,12 @@ vAck:in-memory-library
   after the initial processing by GDB such as loading symbols and placing
   breakpoints.
 
+U stop reply
+
+  Indicates that threads are currently unavailable.  We tried stopping them but
+  they did not respond.  The remote stub reports support for this stop reply to
+  GDB's qSupported query.
+
 * Changed remote packets
 
 qXfer:features:read:target.xml
